# Fortran_Experiences

./: README.md
Fortran_Experiences/Basic/Arrays/: CMakeLists.txt
Fortran_Experiences/Basic/Arrays/app/: main.f90
Fortran_Experiences/Basic/Cpp/: CMakeLists.txt
Fortran_Experiences/Basic/Cpp/app/: calc.f90  calc_test.f90  calc_wrapper.h  main.cpp
Fortran_Experiences/Basic/Functions/: CMakeLists.txt
Fortran_Experiences/Basic/Functions/app/: main.f90  point3d.f90
Fortran_Experiences/Basic/HelloWorld/: CMakeLists.txt
Fortran_Experiences/Basic/HelloWorld/app/: main.f90
Fortran_Experiences/Basic/Interface/: CMakeLists.txt
Fortran_Experiences/Basic/Interface/app/: climate_monitoring.f90  main.f90
Fortran_Experiences/Basic/Math/basic_statistics/: CMakeLists.txt
Fortran_Experiences/Basic/Math/basic_statistics/app/: main.f90  statistical_tools.f90
Fortran_Experiences/Basic/Math/calculate_probability/: CMakeLists.txt
Fortran_Experiences/Basic/Math/calculate_probability/app/: main.f90  statistical_tools.f90
Fortran_Experiences/Basic/Math/remote_data_statistics/: CMakeLists.txt
Fortran_Experiences/Basic/Math/remote_data_statistics/app/: main.f90
Fortran_Experiences/Basic/Math/sine_plot/: CMakeLists.txt
Fortran_Experiences/Basic/Math/sine_plot/app/: main.f90
Fortran_Experiences/Basic/Modules/: CMakeLists.txt
Fortran_Experiences/Basic/Modules/app/: calc_module.f90  main.f90
Fortran_Experiences/Basic/Python/: CMakeLists.txt
Fortran_Experiences/Basic/Python/app/: main.f90  main.py  math_utils.f90
Fortran_Experiences/Basic/Shell/: CMakeLists.txt  PythonEnvSetup.cmake  controller.sh
Fortran_Experiences/Basic/Shell/app/: analysis.f90
Fortran_Experiences/Basic/Shell/python/: generator.py  test.py
Fortran_Experiences/Basic/Strings/: CMakeLists.txt
Fortran_Experiences/Basic/Strings/app/: main.f90
Fortran_Experiences/Basic/Variables/: CMakeLists.txt
Fortran_Experiences/Basic/Variables/app/: main.f90
Fortran_Experiences/Trainings/Simulations/image_processing/: controller.sh
Fortran_Experiences/Trainings/Simulations/image_processing/data_analyzer/: CMakeLists.txt
Fortran_Experiences/Trainings/Simulations/image_processing/data_analyzer/app/: main.f90
Fortran_Experiences/Trainings/Simulations/image_processing/image_converter/: ppm2csv.py
Fortran_Experiences/Trainings/Simulations/image_processing/image_generator/: CMakeLists.txt
Fortran_Experiences/Trainings/Simulations/image_processing/image_generator/src/: main.cpp
Fortran_Experiences/Trainings/Simulations/image_processing/image_plot/: histogram.gp
Fortran_Experiences/Trainings/Simulations/tractor_dynamics/: CMakeLists.txt
Fortran_Experiences/Trainings/Simulations/tractor_dynamics/app/: main.f90  physics_telemetry_generator.f90  stats_analyzer.f90
